--- a/src/styles.css
+++ b/src/styles.css
@@ -68,3 +68,13 @@ html, body {
 /* .react-datetime-picker__inputGroup input[type="datetime-local"] {
   visibility: unset !important;
 } */
+
+/* FABS */
+.fab {
+  border-radius: 100%;
+  bottom: 25px;
+  font-size: 30px;
+  padding: 25px;
+  position: fixed;
+  right: 25px;
+}
